Se agregaron las características

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <header>
+    <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
         <div class="container-fluid d-flex align-items-center">
             <div>
@@ -54,5 +55,120 @@
             Son animales muy simpáticos y sociables, algo que ya se le ha visto en interacción 
             con numerosas especies.</span>
     </div>
+    <!-- Carrusel -->
+    <div class="mt-5 w-100 d-flex justify-content-center">
+        <span class="Titulo fw-bold">Imágenes</span>
+    </div>
+    <hr class="mt-4">
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active data-bs-interval=5000">
+                <div class="row mx-2">
+                    <div class="col-3">
+                        <img src="./img/capibaras/1.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/capibaras/2.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/capibaras/3.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/capibaras/4.jpeg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item data-bs-interval=5000">
+                <div class="row mx-2">
+                    <div class="col-3">
+                        <img src="./img/capibaras/5.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/capibaras/6.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/capibaras/7.webp" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/capibaras/8.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item data-bs-interval=5000">
+                <div class="row mx-2">
+                    <div class="col-3">
+                        <img src="./img/capibaras/9.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/capibaras/10.webp" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/capibaras/11.webp" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/capibaras/12.webp" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <hr>
+    <!-- Características -->
+    <div class="mt-5 w-100 d-flex justify-content-center">
+        <span class="Titulo fw-bold">Características</span>
+    </div>
+    <section class="container-fluid mt-3">
+        <div class="row mx-auto ancho-caracteristicas fila mt-5">
+            <div class="my-2 col-lg-6 col-md-12 col-sm-12 d-flex wrap">
+                <img class="iconos" src="./img/iconos/fruta.png">
+                <div>
+                    <h2 class="fs-5 mt-1 px-4 pb-1"><strong>Alimentación</strong></h2> 
+                    <p class="px-4 parrafo-caracteristicas">Se alimenta principalmente
+                         de plantas acuáticas, gramíneas y otras hierbas palustres. Pero 
+                         también consumen flores, frutos y semillas, y utiliza la corteza 
+                         de los árboles para roer y desgastar sus dientes incisivos.</p> 
+                </div>
+            </div>
+            <div class="my-2 col-lg-6 col-md-12 col-sm-12 d-flex wrap">
+                <img class="iconos" src="./img/iconos/habitat.png">
+                <div>
+                    <h2 class="fs-5 mt-1 px-4 pb-1"><strong>Hábitat</strong></h2> 
+                    <p class="px-4 parrafo-caracteristicas">Vive cerca de un cuerpo de agua, debe haber
+                        áreas cercanas para pastorear y alimentarse y zonas secas para descansar y
+                         tener a las crias
+                    </p> 
+                </div>
+            </div>
+            <div class="my-2 col-lg-6 col-md-12 col-sm-12 d-flex wrap">
+                <img class="iconos" src="./img/iconos/comportamiento.png">
+                <div>
+                    <h2 class="fs-5 mt-1 px-4 pb-1"><strong>Comportamiento</strong></h2> 
+                    <p class="px-4 parrafo-caracteristicas">Es un animal gregario, vive en grupos numerosos de entre 6 a 30 individuos.
+                        Suelen organizar el espacio donde viven.Pueden comunicarse entre ellos emitiendo señales.
+                    </p> 
+                </div>
+            </div>
+            <div class="my-2 col-lg-6 col-md-12 col-sm-12 d-flex wrap">
+                <img class="iconos" src="./img/iconos/reproduccion.png">
+                <div>
+                    <h2 class="fs-5 mt-1 px-4 pb-1"><strong>Reproducción</strong></h2> 
+                    <p class="px-4 parrafo-caracteristicas">Se pueden reproducir durante todo el año, 
+                        pero sobre todo en primavera-verano. Alcanzan
+                         su madurez sexual entre el año y medio y dos de vida y el tipo de reproducción
+                          que llevan involucra a un macho con varias hembras.</p> 
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
