--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" 
-                        href="sandías.html">Sandías</a>
+                        href="sandias.html">Sandías</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" 
@@ -47,7 +47,7 @@
     <div class="mt-5 w-100 d-flex justify-content-center">
         <span class="Titulo fw-bold">Capibaras</span>
     </div>
-    <div class="mt-2 w-75 mx-auto">
+    <div class="mt-5 w-75 mx-auto">
         <span class="parrafo d-flex justify-content-center">
             Se trata del roedor viviente más grande del mundo. 
             Pertenece a la familia Caviidae y su nombre científico es 
@@ -163,11 +163,25 @@
                     <p class="px-4 parrafo-caracteristicas">Se pueden reproducir durante todo el año, 
                         pero sobre todo en primavera-verano. Alcanzan
                          su madurez sexual entre el año y medio y dos de vida y el tipo de reproducción
-                          que llevan involucra a un macho con varias hembras.</p> 
+                          que llevan involucra a un macho con varias hembras.</p>
                 </div>
             </div>
         </div>
     </section>
+    <div class="w-100 margen-boton">
+        <form action="video.html" class="w-100 d-flex justify-content-center">
+            <input type="submit" value="Ver vídeo" class="botonuwu mt-5">
+        </form>
+    </div>
+    <section>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#ffaf2b " fill-opacity="1" d="M0,64L205.7,96L411.4,256L617.1,96L822.9,320L1028.6,64L1234.3,128L1440,32L1440,320L1234.3,320L1028.6,320L822.9,320L617.1,320L411.4,320L205.7,320L0,320Z"></path></svg>
+    </section>
+    <footer class="w-100 d-flex justify-content-center align-items-center footer-cap">
+        <p class="fs-5 px-3 pt-3">
+            Nardoz &copy; Todos los derechos reservados.
+        </p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
