--- a/addOpinion.html
+++ b/addOpinion.html
@@ -11,7 +11,7 @@
 </head>
 <header>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" id="navbarMovil">
         <div class="container-fluid d-flex align-items-center">
             <div>
                 <span class="Titulo-pagina-sandias fw-bold">Capibaras y sandías</span>
@@ -47,26 +47,26 @@
     <div class="d-flex flex-row justify-content-center ancho-caracteristicas mx-auto text-center">
         <span class="Titulo-sandias fw-bold mt-5">Agregar opinión</span>
     </div>
-    <div class="d-flex flex-column mt-5 mx-auto w-50">
-        <div class="mb-3 d-flex flex-grow-1">
-            <span>Nombre:</span><input type="text" class="ms-2 w-100 borde-comentario">
+    <div class="formulario mt-4">
+        <div class="mb-3 entrada">
+            <span>Nombre:</span><input type="text" class="margen-left w-100 borde-comentario">
         </div>
-        <div class="mb-3 d-flex flex-grow-1 mt-3">
-            <span>Correo:</span><input type="text" class="ms-2 w-100 borde-comentario">
+        <div class="mb-3 entrada mt-3">
+            <span>Correo:</span><input type="text" class="margen-left w-100 borde-comentario">
         </div>
-        <div class="mb-3 d-flex flex-grow-1 mt-3">
+        <div class="mb-3 entrada mt-3">
             <span>Opinión:</span>
-            <textarea rows="4" class="ms-2 w-100 borde-comentario" style="resize: none;"></textarea>
+            <textarea rows="4" class="margen-left w-100 borde-comentario" style="resize: none;"></textarea>
         </div>
         <div class="d-flex mt-3">
             <div class="w-50">
                 <form action="opiniones.html" class="d-flex ms-0">
-                    <input type="submit" value="Cancelar" class="botonuwu-cancelar">
+                    <input type="submit" value="Cancelar" class="botonuwu-cancelar fw-bold">
                 </form>
             </div>
             <div class="w-50">
                 <form action="opiniones.html" class="d-flex justify-content-end">
-                    <input type="submit" value="Publicar" class="botonuwu-publicar">
+                    <input type="submit" value="Publicar" class="botonuwu-publicar fw-bold">
                 </form>
             </div>
         </div>
@@ -76,7 +76,7 @@
             <path fill="#FE8D8D" fill-opacity="1" d="M0,64L205.7,96L411.4,256L617.1,96L822.9,320L1028.6,64L1234.3,128L1440,32L1440,320L1234.3,320L1028.6,320L822.9,320L617.1,320L411.4,320L205.7,320L0,320Z"></path></svg>
     </section>
     <footer class="w-100 d-flex justify-content-center align-items-center footer-san">
-        <p class="fs-5 px-3 pt-3">
+        <p class="px-3 pt-3">
             Nardoz &copy; Todos los derechos reservados.
         </p>
     </footer>
