Se terminó el dimensionamiento de agregar opiniones y otras cosillas

--- a/opiniones.html
+++ b/opiniones.html
@@ -64,7 +64,7 @@
     </div>
     <div class="d-flex w-75 mx-auto borde-comentario px-2 mt-2 pt-3">
         <p><span class="text-sandias">はるか:</span>私 は カピバラ が 大 大 大 好き 
-            です。 かぴあバラ は とても かわいい です よ。 カピバラ が ほしいです
+            です。 かぴバラ は とても かわいい です よ。 カピバラ が ほしいです
         </p>
     </div>
     <section>
