Se acomodó el dimensionamiento de opiniones

--- a/opiniones.html
+++ b/opiniones.html
@@ -11,7 +11,7 @@
 </head>
 <header>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" id="navbarMovil">
         <div class="container-fluid d-flex align-items-center">
             <div>
                 <span class="Titulo-pagina-sandias fw-bold">Capibaras y sandías</span>
@@ -41,15 +41,15 @@
                 </ul>
             </div>
         </div>
-      </nav>
+    </nav>
 </header>
 <body>
-    <div class="d-flex mt-5 mx-auto">
+    <div class="d-flex mt-4 mx-auto">
         <form action="addOpinion.html" class="ms-auto me-3">
             <input type="submit" value="+ opinión" class="botonuwu-opinion">
         </form>
     </div>
-    <div class="d-flex flex-row justify-content-center ancho-caracteristicas mx-auto text-center">
+    <div class="d-flex flex-row justify-content-center ancho-caracteristicas mx-auto text-center mt-2">
         <span class="Titulo-sandias fw-bold">Opiniones</span>
     </div>
     <div class="d-flex w-75 mx-auto borde-comentario px-2 pt-3 mt-4">
