--- a/addOpinion.html
+++ b/addOpinion.html
@@ -11,7 +11,7 @@
 </head>
 <header>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" id="navbarMovil">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="height: 60px;">
         <div class="container-fluid d-flex align-items-center">
             <div>
                 <span class="Titulo-pagina-sandias fw-bold">Capibaras y sandías</span>
@@ -72,6 +72,7 @@
             </div>
         </div>
     </div>
+    <div style="height: 210px;"></div>
     <section>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#FE8D8D" fill-opacity="1" d="M0,64L205.7,96L411.4,256L617.1,96L822.9,320L1028.6,64L1234.3,128L1440,32L1440,320L1234.3,320L1028.6,320L822.9,320L617.1,320L411.4,320L205.7,320L0,320Z"></path></svg>
