--- a/opiniones.html
+++ b/opiniones.html
@@ -11,7 +11,7 @@
 </head>
 <header>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" id="navbarMovil">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="height: 60px;">
         <div class="container-fluid d-flex align-items-center">
             <div>
                 <span class="Titulo-pagina-sandias fw-bold">Capibaras y sandías</span>
@@ -67,12 +67,13 @@
             です。 かぴバラ は とても かわいい です よ。 カピバラ が ほしいです
         </p>
     </div>
+    <div style="height: 100px"></div>
     <section>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#FE8D8D" fill-opacity="1" d="M0,64L205.7,96L411.4,256L617.1,96L822.9,320L1028.6,64L1234.3,128L1440,32L1440,320L1234.3,320L1028.6,320L822.9,320L617.1,320L411.4,320L205.7,320L0,320Z"></path></svg>
     </section>
     <footer class="w-100 d-flex justify-content-center align-items-center footer-san">
-        <p class="fs-5 px-3 pt-3">
+        <p class="px-3 pt-3">
             Nardoz &copy; Todos los derechos reservados.
         </p>
     </footer>
