Se creó el dimensionamiento de capibaras, sandías y vídeo

--- a/sandias.html
+++ b/sandias.html
@@ -11,7 +11,7 @@
 </head>
 <header>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="height: 60px;">
         <div class="container-fluid d-flex align-items-center">
             <div>
                 <span class="Titulo-pagina-sandias fw-bold">Capibaras y sandías</span>
@@ -140,7 +140,7 @@
             </div>
             <div class="my-2 col-lg-6 col-md-12 col-sm-12 d-flex wrap">
                 <img class="iconos" src="./img/iconos/especies.png">
-                <div>
+                <div class="w-100">
                     <h2 class="fs-5 mt-1 px-4 pb-1"><strong>Especies</strong></h2> 
                     <p class="px-4 parrafo-caracteristicas">1. Crimson sweet.<br>2. Reina india.<br>3. Reina negra.<br>
                         4. Sandia melón (sandía amarilla).<br>5. Sugar Baby.
