--- a/video.html
+++ b/video.html
@@ -11,7 +11,7 @@
 </head>
 <header>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="height: 60px;">
         <div class="container-fluid d-flex align-items-center">
             <div>
                 <span class="Titulo-pagina fw-bold">Capibaras y sandías</span>
@@ -47,13 +47,14 @@
     <div class="mt-5 w-100 d-flex justify-content-center">
         <span class="Titulo fw-bold">Ver vídeo</span>
     </div>
-    <div class="w-100 d-flex justify-content-center">
-        <iframe width="889" height="500" src="https://www.youtube.com/embed/IaLGdRx7prA?si=7N-upl5nsJ9e_rbm" 
+    <div class="w-100 mt-4 d-flex justify-content-center">
+        <iframe class="video" src="https://www.youtube.com/embed/IaLGdRx7prA?si=7N-upl5nsJ9e_rbm" 
         title="YouTube video player" frameborder="0" class="mx-auto mt-5"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen></iframe>
     </div>
     </section>
+    <div class="espacio"></div>
     <div class="w-100 margen-boton">
         <form action="index.html" class="w-100 d-flex justify-content-center">
             <input type="submit" value="Regresar" class="botonuwu mt-5">
@@ -64,7 +65,7 @@
             <path fill="#ffaf2b " fill-opacity="1" d="M0,64L205.7,96L411.4,256L617.1,96L822.9,320L1028.6,64L1234.3,128L1440,32L1440,320L1234.3,320L1028.6,320L822.9,320L617.1,320L411.4,320L205.7,320L0,320Z"></path></svg>
     </section>
     <footer class="w-100 d-flex justify-content-center align-items-center footer-cap">
-        <p class="fs-5 px-3 pt-3">
+        <p class="px-3 pt-3">
             Nardoz &copy; Todos los derechos reservados.
         </p>
     </footer>
