--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <header>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="height: 60px;">
         <div class="container-fluid d-flex align-items-center">
             <div>
                 <span class="Titulo-pagina fw-bold">Capibaras y sandías</span>
@@ -65,48 +65,48 @@
             <div class="carousel-item active data-bs-interval=5000">
                 <div class="row mx-2">
                     <div class="col-3">
-                        <img src="./img/capibaras/1.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                        <img src="./img/capibaras/1.jpg" class="d-block img-fluit carousel-img-size" alt="...">
                     </div>
                     <div class="col-3">
-                        <img src="./img/capibaras/2.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                        <img src="./img/capibaras/2.jpg" class="d-block img-fluit carousel-img-size" alt="...">
                     </div>
                     <div class="col-3">
-                        <img src="./img/capibaras/3.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                        <img src="./img/capibaras/3.jpg" class="d-block img-fluit carousel-img-size" alt="...">
                     </div>
                     <div class="col-3">
-                        <img src="./img/capibaras/4.jpeg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item data-bs-interval=5000">
-                <div class="row mx-2">
-                    <div class="col-3">
-                        <img src="./img/capibaras/5.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
-                    </div>
-                    <div class="col-3">
-                        <img src="./img/capibaras/6.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
-                    </div>
-                    <div class="col-3">
-                        <img src="./img/capibaras/7.webp" class="d-block img-fluit w-100 carousel-img-size" alt="...">
-                    </div>
-                    <div class="col-3">
-                        <img src="./img/capibaras/8.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                        <img src="./img/capibaras/4.jpeg" class="d-block img-fluit carousel-img-size" alt="...">
                     </div>
                 </div>
             </div>
             <div class="carousel-item data-bs-interval=5000">
                 <div class="row mx-2">
                     <div class="col-3">
-                        <img src="./img/capibaras/9.jpg" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                        <img src="./img/capibaras/5.jpg" class="d-block img-fluit carousel-img-size" alt="...">
                     </div>
                     <div class="col-3">
-                        <img src="./img/capibaras/10.webp" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                        <img src="./img/capibaras/6.jpg" class="d-block img-fluit carousel-img-size" alt="...">
                     </div>
                     <div class="col-3">
-                        <img src="./img/capibaras/11.webp" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                        <img src="./img/capibaras/7.webp" class="d-block img-fluit carousel-img-size" alt="...">
                     </div>
                     <div class="col-3">
-                        <img src="./img/capibaras/12.webp" class="d-block img-fluit w-100 carousel-img-size" alt="...">
+                        <img src="./img/capibaras/8.jpg" class="d-block img-fluit carousel-img-size" alt="...">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item data-bs-interval=5000">
+                <div class="row mx-2">
+                    <div class="col-3">
+                        <img src="./img/capibaras/9.jpg" class="d-block img-fluit carousel-img-size" alt="...">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/capibaras/10.webp" class="d-block img-fluit carousel-img-size" alt="...">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/capibaras/11.webp" class="d-block img-fluit carousel-img-size" alt="...">
+                    </div>
+                    <div class="col-3">
+                        <img src="./img/capibaras/12.webp" class="d-block img-fluit carousel-img-size" alt="...">
                     </div>
                 </div>
             </div>
@@ -126,11 +126,13 @@
         <span class="Titulo fw-bold">Características</span>
     </div>
     <section class="container-fluid mt-3">
-        <div class="row mx-auto ancho-caracteristicas fila mt-5">
+        <div class="row mx-auto ancho-caracteristicas mt-5">
             <div class="my-2 col-lg-6 col-md-12 col-sm-12 d-flex wrap">
-                <img class="iconos" src="./img/iconos/fruta.png">
+                <div class="iconos">
+                    <img class="iconos" src="./img/iconos/fruta.png">
+                </div>
                 <div>
-                    <h2 class="fs-5 mt-1 px-4 pb-1"><strong>Alimentación</strong></h2> 
+                    <h2 class="titulo-caracteristicas mt-1 px-4 pb-1"><strong>Alimentación</strong></h2> 
                     <p class="px-4 parrafo-caracteristicas">Se alimenta principalmente
                          de plantas acuáticas, gramíneas y otras hierbas palustres. Pero 
                          también consumen flores, frutos y semillas, y utiliza la corteza 
@@ -140,7 +142,7 @@
             <div class="my-2 col-lg-6 col-md-12 col-sm-12 d-flex wrap">
                 <img class="iconos" src="./img/iconos/habitat.png">
                 <div>
-                    <h2 class="fs-5 mt-1 px-4 pb-1"><strong>Hábitat</strong></h2> 
+                    <h2 class="titulo-caracteristicas mt-1 px-4 pb-1"><strong>Hábitat</strong></h2> 
                     <p class="px-4 parrafo-caracteristicas">Vive cerca de un cuerpo de agua, debe haber
                         áreas cercanas para pastorear y alimentarse y zonas secas para descansar y
                          tener a las crias
@@ -150,7 +152,7 @@
             <div class="my-2 col-lg-6 col-md-12 col-sm-12 d-flex wrap">
                 <img class="iconos" src="./img/iconos/comportamiento.png">
                 <div>
-                    <h2 class="fs-5 mt-1 px-4 pb-1"><strong>Comportamiento</strong></h2> 
+                    <h2 class="titulo-caracteristicas mt-1 px-4 pb-1"><strong>Comportamiento</strong></h2> 
                     <p class="px-4 parrafo-caracteristicas">Es un animal gregario, vive en grupos numerosos de entre 6 a 30 individuos.
                         Suelen organizar el espacio donde viven.Pueden comunicarse entre ellos emitiendo señales.
                     </p> 
@@ -159,7 +161,7 @@
             <div class="my-2 col-lg-6 col-md-12 col-sm-12 d-flex wrap">
                 <img class="iconos" src="./img/iconos/reproduccion.png">
                 <div>
-                    <h2 class="fs-5 mt-1 px-4 pb-1"><strong>Reproducción</strong></h2> 
+                    <h2 class="titulo-caracteristicas mt-1 px-4 pb-1"><strong>Reproducción</strong></h2> 
                     <p class="px-4 parrafo-caracteristicas">Se pueden reproducir durante todo el año, 
                         pero sobre todo en primavera-verano. Alcanzan
                          su madurez sexual entre el año y medio y dos de vida y el tipo de reproducción
