Se agregó el color y los iconos a los navabar

--- a/sandias.html
+++ b/sandias.html
@@ -11,7 +11,7 @@
 </head>
 <header>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="height: 60px;">
         <div class="container-fluid d-flex align-items-center">
             <div>
                 <span class="Titulo-pagina-sandias fw-bold">Capibaras y sandías</span>
