Se agregó el color y los iconos a los navabar

--- a/sandias.html
+++ b/sandias.html
@@ -11,10 +11,11 @@
 </head>
 <header>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="height: 60px;">
+    <nav class="navbar navbar-expand-lg sticky-top" style="height: 60px; background-color: #FFAFAF">
         <div class="container-fluid d-flex align-items-center">
             <div>
                 <span class="Titulo-pagina-sandias fw-bold">Capibaras y sandías</span>
+                <span style="font-size: 25px;">🍉</span>
             </div>
             <button
                 class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -27,15 +28,15 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 md-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" 
+                        <a class="nav-link active" style="color: white;" aria-current="page" 
                         href="index.html">Capibaras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" 
+                        <a class="nav-link active" style="color: white;"  aria-current="page" 
                         href="sandias.html">Sandías</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" 
+                        <a class="nav-link active" style="color: white;"  aria-current="page" 
                         href="opiniones.html">Opiniones</a>
                     </li>
                 </ul>
@@ -140,7 +141,7 @@
             </div>
             <div class="my-2 col-lg-6 col-md-12 col-sm-12 d-flex wrap">
                 <img class="iconos" src="./img/iconos/especies.png">
-                <div>
+                <div class="w-100">
                     <h2 class="fs-5 mt-1 px-4 pb-1"><strong>Especies</strong></h2> 
                     <p class="px-4 parrafo-caracteristicas">1. Crimson sweet.<br>2. Reina india.<br>3. Reina negra.<br>
                         4. Sandia melón (sandía amarilla).<br>5. Sugar Baby.
