--- a/opiniones.html
+++ b/opiniones.html
@@ -11,10 +11,11 @@
 </head>
 <header>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="height: 60px;">
+    <nav class="navbar navbar-expand-lg sticky-top" style="height: 60px; background-color: #FFAFAF">
         <div class="container-fluid d-flex align-items-center">
             <div>
                 <span class="Titulo-pagina-sandias fw-bold">Capibaras y sandías</span>
+                <span style="font-size: 25px;">🍉</span>
             </div>
             <button
                 class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -27,15 +28,15 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 md-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" 
+                        <a class="nav-link active" style="color: white;" aria-current="page" 
                         href="index.html">Capibaras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" 
+                        <a class="nav-link active" style="color: white;"  aria-current="page" 
                         href="sandias.html">Sandías</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" 
+                        <a class="nav-link active" style="color: white;"  aria-current="page" 
                         href="opiniones.html">Opiniones</a>
                     </li>
                 </ul>
