Se arregló el vídeo

--- a/video.html
+++ b/video.html
@@ -49,7 +49,7 @@
         <span class="Titulo fw-bold">Ver vídeo</span>
     </div>
     <div class="w-100 d-flex justify-content-center">
-        <iframe width="889" height="500" src="https://www.youtube.com/embed/IaLGdRx7prA?si=7N-upl5nsJ9e_rbm" 
+        <iframe class="video" width="889" height="500" src="https://www.youtube.com/embed/IaLGdRx7prA?si=7N-upl5nsJ9e_rbm" 
         title="YouTube video player" frameborder="0" class="mx-auto mt-5"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen></iframe>
