--- a/sandias.html
+++ b/sandias.html
@@ -26,7 +26,7 @@
                     <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 md-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 md-lg-0" style="background-color: #ff9898;">
                     <li class="nav-item">
                         <a class="nav-link active" style="color: white;" aria-current="page" 
                         href="index.html">Capibaras</a>
