--- a/video.html
+++ b/video.html
@@ -25,8 +25,8 @@
                 aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 md-lg-0">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+                <ul class="navbar-nav ms-auto mb-2 md-lg-0" style="background-color: #ffe498;">
                     <li class="nav-item">
                         <a class="nav-link active" style="color: white;" aria-current="page" 
                         href="index.html">Capibaras</a>
